Update index.html v3
Image update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     .login-image {
       flex: 1;
-      background: url('IMAGE_URL') no-repeat center center;
+      background: url('paakasaala.jpg') no-repeat center center;
       background-size: cover;
       min-height: 300px;
     }
