--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     .login-image {
       flex: 1;
-      background: url('image.jpg') no-repeat center center;
+      background: url('kukoo.jpg') no-repeat center center;
       background-size: cover;
       min-height: 300px;
     }
