--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     }
     .dashboard-links button:hover { background: #218838; }
     .back-dashboard {
-      display: block;
+      display: inline-block;
       margin: 20px auto;
       padding: 10px 20px;
       background: #6c757d;
@@ -139,7 +139,6 @@
       color: #fff;
       cursor: pointer;
       font-size: 1rem;
-      width: fit-content;
     }
     .back-dashboard:hover { background: #5a6268; }
 
@@ -301,25 +300,28 @@
 
     <!-- Items Management View -->
     <div id="admin-items-section" style="display: none;">
-      <h2>Manage Food Item Masters</h2>
-      <div class="search-container">
-        <input type="text" id="search-box" placeholder="Search Food Items..." />
+      <!-- List View Container -->
+      <div id="items-list-view">
+        <h2>Manage Food Item Masters</h2>
+        <div class="search-container">
+          <input type="text" id="search-box" placeholder="Search Food Items..." />
+        </div>
+        <table id="bom-list-table">
+          <thead>
+            <tr>
+              <th>Food Item</th>
+              <th>Base Qty</th>
+              <th># Ingredients</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Populated dynamically -->
+          </tbody>
+        </table>
+        <button id="show-add-bom">Add New Food Item</button>
       </div>
-      <table id="bom-list-table">
-        <thead>
-          <tr>
-            <th>Food Item</th>
-            <th>Base Qty</th>
-            <th># Ingredients</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Populated dynamically -->
-        </tbody>
-      </table>
-      <button id="show-add-bom">Add New Food Item</button>
-      <!-- Form for Add/Edit Food Item -->
+      <!-- Form View Container -->
       <div id="bom-form-section" style="display: none;">
         <h2 id="form-title">Add New Food Item Master</h2>
         <form id="bom-master-form">
@@ -484,6 +486,9 @@
     document.getElementById("link-items").addEventListener("click", function () {
       document.getElementById("admin-dashboard").style.display = "none";
       document.getElementById("admin-items-section").style.display = "block";
+      // Show the list view and hide the form view
+      document.getElementById("items-list-view").style.display = "block";
+      document.getElementById("bom-form-section").style.display = "none";
       renderItemMasterOptions();
       refreshBOMList();
     });
@@ -533,19 +538,21 @@
         row.style.display = foodItem.indexOf(query) !== -1 ? "" : "none";
       });
     });
+    // When "Add New Food Item" is clicked, hide the list view and show the form view.
     document.getElementById("show-add-bom").addEventListener("click", function () {
       currentEditKey = null;
       document.getElementById("form-title").innerText = "Add New Food Item Master";
-      document.getElementById("bom-list-table").parentElement.style.display = "none";
+      document.getElementById("items-list-view").style.display = "none";
       document.getElementById("bom-form-section").style.display = "block";
       document.getElementById("bom-master-form").reset();
       resetIngredients();
     });
+    // "Back to Dashboard" (in this case, back to the list view) button in the form view.
     document.getElementById("cancel-add-bom").addEventListener("click", function () {
       document.getElementById("bom-master-form").reset();
       resetIngredients();
       document.getElementById("bom-form-section").style.display = "none";
-      document.getElementById("admin-items-section").style.display = "block";
+      document.getElementById("items-list-view").style.display = "block";
       currentEditKey = null;
     });
     function resetIngredients() {
@@ -598,7 +605,7 @@
       document.getElementById("bom-master-form").reset();
       resetIngredients();
       document.getElementById("bom-form-section").style.display = "none";
-      document.getElementById("admin-items-section").style.display = "block";
+      document.getElementById("items-list-view").style.display = "block";
       refreshBOMList();
       currentEditKey = null;
     });
@@ -633,7 +640,7 @@
               row.remove();
             });
           });
-          document.getElementById("admin-items-section").style.display = "none";
+          document.getElementById("items-list-view").style.display = "none";
           document.getElementById("bom-form-section").style.display = "block";
         }
       } else if (target.classList.contains("delete-btn")) {
